<resources>
    <string name="app_name" translatable="false">WhereWare</string>
    <string name="product_name">Product</string>
    <string name="product_estimatedtime">Estimated Time: %1$d</string>
    <string name="product_quantity">Quantity: %1$d</string>
    <string name="product_location">Location: %1$s</string>
    <string name="estimated_time">Estimated time: %1$dh %2$dm</string>
    <string name="order_id">Order %1$d</string>
    <string name="unclosed_orders">You have %1$d orders to be completed!</string>
    <string name="collection_time">Collection Time: %1$dh %2$dm</string>
    <string name="manage_reports">Generate Report</string>
    <string name="manage_products">Manage Products</string>
    <string name="manage_orders">Manage Orders</string>
    <string name="hi_manager_what_would_you_like_to_do_today">Hi Manager, what would you like to do today?</string>
    <string name="manage_employees">Manage Employees</string>
    <string name="filter_orders">Filter Orders</string>
    <string name="admin" translatable="false">admin</string>
    <string name="employee" translatable="false">employee</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="login_button">Login</string>
    <string name="invalid_login">Invalid Login. You are not wanted here!</string>
    <string name="user_name_text">Name : %1$s %2$s</string>
    <string name="text_collection_time">Collection Time: PlaceHolder</string>
    <string name="create_user_text">Create User</string>
    <string name="default_lastname">Mustermann</string>
    <string name="title_lastname">Lastname:</string>
    <string name="default_firstname">Max</string>
    <string name="title_firstname">Firstname:</string>
    <string name="edit_user">Edit User</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="edit_product_name" translatable="false">Product Name</string>
    <string name="default_product" translatable="false">XBOX</string>
    <string name="edit_estimated_time" translatable="false">Estimated Time</string>
    <string name="edit_location" translatable="false">Location</string>
    <string name="edit_quantity" translatable="false">Quantity</string>
    <string name="default_time" translatable="false">5</string>
    <string name="default_location" translatable="false">aisle 3</string>
    <string name="default_quantity" translatable="false">12</string>
    <string name="create_product" translatable="false">Create Product</string>
    <string name="edit_product" translatable="false">Edit Product</string>
    <string name="scan_product">Scan product</string>
    <string name="no_camera_permission">You need the camera permission to be able to use this app!</string>
    <string name="scan_invalid_id">Invalid product id!</string>
    <string name="camera_not_working">Camera does not work!</string>
    <string name="login_title">Login</string>
    <string name="managerOrderActivityShowingOrders">Showing %1$d completed orders for %2$s</string>
    <string name="managerOrderActivityAvgTime">Average collection time: %1$.2f minutes</string>
    <string name="finishOrderButton">Finish order</string>
    <string name="language_de">German</string>
    <string name="language_en">English</string>
    <string name="logout_button">Log out</string>
    <string name="invalid_date">Invalid Date</string>
    <string name="invalid_date_in_future">Date is in future</string>
    <string name="invalid_date_end_before_start">End Date is in before Start Date</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
</resources>