<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.ManagerActivity">

    <Button
        android:id="@+id/buttonManageReports"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:text="@string/manage_reports"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonManageProducts" />

    <Button
        android:id="@+id/buttonManageProducts"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:text="@string/manage_products"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonManageOrders" />

    <Button
        android:id="@+id/buttonManageOrders"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:text="@string/manage_orders"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonManageEmployees" />

    <Button
        android:id="@+id/buttonManageEmployees"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginTop="48dp"
        android:text="@string/manage_employees"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewWelcome" />

    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="271dp"
        android:layout_height="90dp"
        android:layout_marginTop="128dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/hi_manager_what_would_you_like_to_do_today"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonLogoutManager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="12dp"
        android:text="@string/logout_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>